kubernetes-lb-example/kubernetes/istio-grpc-web/echo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: echo-server
  name: echo-server
spec:
  replicas: 2
  selector:
    matchLabels:
      run: echo-server
  template:
    metadata:
      labels:
        run: echo-server
    spec:
      containers:
      - name: echo-server
        image: saturnism/echo-server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: echo-server
  name: echo-server
spec:
  ports:
  - name: grpc-web
    port: 8080
    targetPort: 8080
  selector:
    run: echo-server
  sessionAffinity: None
  type: ClusterIP
